# Mango

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md
examples/: basic.py
src/mango/: __init__.py  compiler.py  executor.py  expressions.py  projection.py  query.py  row.py  schema.py  sql.py
src/mango/pg/: __init__.py  columns.py
tests/: test_compiler.py  test_postgres_select_syntax.py  test_projection.py  test_pyright_inference.py
tests/typing/: test_inference.py  test_limit_inference.py
