[project]
name = "mango"
version = "0.1.0"
description = "A type-first Python ORM MVP for PostgreSQL"
readme = "README.md"
authors = [
    { name = "Pav Sidhu", email = "pav@pavsidhu.com" }
]
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
